fix auto-parameter-name-factory